5 try: gaps margins fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,9 @@
 }
 
 body {
+  font-family: var(--main-font-family);
+  font-size: var(--main-font-size);
+  line-height: var(--main-line-height);
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
