--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,13 +4,19 @@
 */
 
 :root {
-  --main-title-color: #DB00FF;
+  --main-font-size: 18px;
+  --main-line-height: 23.4px;
+  --main-title-color: #db00ff;
   --shadow-color: #ff0070;
   --accent-color: #ff0070;
   --elems-color: #ff0070;
-  --title-color: #000;
+  --title-color: #000028;
   --main-font-family: 'IBM Plex mono', monospace;
   --bg-color: #000028;
   --text-color: #f1b2ce;
   --bg-image: url(../images/cover-image-dark.png);
+}
+
+body {
+  line-height: 1.3;
 }
